--- a/src/main/webapp/resources/css/loginstyle.css
+++ b/src/main/webapp/resources/css/loginstyle.css
@@ -52,7 +52,7 @@
                 width:100%;
                 height:35px;
                 font-size: 14pt;
-                margin-top:100px;
+                margin-top: 10px;
             }
             #forgot{
                 text-align: right;
@@ -60,3 +60,10 @@
                 color:rgb(164, 164, 164);
                 margin:10px 0px;
             }
+            #autologin{
+            	text-align: right;
+                font-size:12pt;
+                color:rgb(164, 164, 164);
+                margin:10px 0px;
+            }
+            
